# Remote-Vibe-Execution

./: config.example.yaml  pyproject.toml
remote-vibe-execution/: README.md  config.example.yaml  pyproject.toml
remote-vibe-execution/scanner/: __init__.py  orchestrator.py  preprocessor.py  reporters.py
remote-vibe-execution/scanners/: __init__.py  dependency_scanner.py
rules/: custom_rules.yml  python_ssrf.yml
scanner/: ai_agent.py  cli.py  config.py  github_client.py  models.py  orchestrator.py  risk_engine.py
scanners/: secret_scanner.py  static_analyzer.py
