[project]
name = "remote-vibe-execution"
version = "1.0.0"
description = "AI-powered security code scanner for GitHub repositories"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "gitpython>=3.1.40",
    "semgrep>=1.50.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "networkx>=3.2",
    "tree-sitter>=0.20.4",
    "packaging>=23.2",
    "aiohttp>=3.9.0",
    "jinja2>=3.1.3",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "tinydb>=4.8.0",
]

[project.scripts]
remote-vibe-execution = "scanner.cli:main"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
